--- a/www/src/app/footer/footer.component.html
+++ b/www/src/app/footer/footer.component.html
@@ -1,12 +1,17 @@
 <div class="footer" fxLayout="row wrap" fxLayoutAlign="space-around">
-  <div fxFlex.lt-md="90" fxFlex.gt-sm="45" style="text-align: center">
-    <img style="padding-top: 20px; max-width: 400px; width: 100%; height: auto;" src="/assets/metaverse.png"
-      alt="Metaverse">
+  <div fxFlex.lt-md="90" fxFlex.gt-sm="45">
+    <a href="https://mvs.org">
+      <img style="padding-top: 0px; max-width: 400px; width: 100%; height: auto;" src="/assets/img/metaverse.png"
+        alt="Metaverse">
+    </a>
+    <p>Bitident is an open standard for decentralized authentication powered by the <a href="https://mvs.org">Metaverse</a> public Blockchain.</p>
   </div>
   <div fxFlex.lt-md="90" fxFlex.gt-sm="45">
-    <p>Metaverse Foundation aims to maintain the normal operation of Metaverse Blockchain and build a complete and
-      affluent Metaverse Blockchain Ecosystem. The Foundation’s investment and guidance is based on the development of
-      all industrial links derived from the Metaverse Blockchain.</p>
+    <p>The software is provided "as is", without warranty of any kind, express or implied, including but not limited to
+      the warranties of merchantability, fitness for a particular purpose and noninfringement. in no event shall the
+      authors or copyright holders be liable for any claim, damages or other liability, whether in an action of
+      contract, tort or otherwise, arising from, out of or in connection with the software or the use or other dealings
+      in the software.</p>
     <span>Copyright 2019 bitident. All Rights Reserved.</span>
   </div>
 </div>
