--- a/www/src/app/request/request.component.html
+++ b/www/src/app/request/request.component.html
@@ -18,7 +18,7 @@
     <h2>Timeout</h2>
   </div>
   <ng-template #success>
-    <img src="/assets/baseline-done_all-24px.svg" width="100%" alt="Success">
+    <img src="/assets/img/check.svg" width="50%" alt="Success">
   </ng-template>
 </ng-template>
 <button mat-raised-button color="primary" (click)="cancel()">{{completed?'Back':'Cancel'}}</button>
