--- a/www/src/app/info/info.component.html
+++ b/www/src/app/info/info.component.html
@@ -1,11 +1,13 @@
-<h1 style="font-size: 5vw; margin-bottom: 0px;">bitident</h1>
-<h4 style="margin-top: 0px;">Powered by Metaverse</h4>
-<h2>Decentralized Authentication</h2>
+<div class="logo">
+  <img src="/assets/img/bitident.png" alt="bitident">
+</div>
+<h1>Decentralized Authentication</h1>
 <p>
   Bitident enables your users to use a decentralized way to authenticate with your application.
-  By using the Metaverse public Blockchain there is no need for a 3rd party to validate your 2 factor
-  authentication request. Still your user will be able to use one identity to authenticate to multiple systems
-  or create multiple identities for different purposes.
+  By using the Metaverse public Blockchain there is no need to store authentication secrets nor
+  rely on 3rd parties to validate authentication requests. Still your user will be able to use 
+  one identity to authenticate to multiple systems or create multiple identities for different 
+  purposes.
 </p>
 <p>
   Try our solution by entering your Metaverse Avatar name and create an authentication request. If you don't
