--- a/www/src/app/app.component.html
+++ b/www/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="space-between" style="height: 100%;">
+<div fxLayout="column" fxLayoutAlign="space-between">
   <div fxLayout="row wrap" fxLayoutAlign="space-around">
     <app-info fxFlex.lt-md="90" fxFlex.gt-sm="45"></app-info>
     <div fxFlex.lt-md="90" fxFlex.gt-sm="45" fxLayout="column" fxLayoutAlign="center">
