--- a/www/src/app/request/request.component.html
+++ b/www/src/app/request/request.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!completed; else finished" style="padding-top: 20px; padding-bottom: 10px;">
   <p>Please open your MyETPWallet and use the 2FA option from the menu to scan the generated QR code or enter the
     generated request token.</p>
-  <qrcode [qrdata]="token" usesvg="true" [level]="'M'"></qrcode>
+  <qrcode [qrdata]="token" usesvg="true" [level]="'M'" size="256"></qrcode>
   <button mat-stroked-button color="secondary" ngxClipboard [cbContent]="token">Copy request to clipboad</button>
 
   <div style="text-align: center; padding-top: 20px;">waiting for confirmation</div>
