--- a/www/src/app/footer/footer.component.html
+++ b/www/src/app/footer/footer.component.html
@@ -5,7 +5,9 @@
         alt="Metaverse">
     </a>
     <p>Bitident is an open standard for decentralized authentication powered by the <a href="https://mvs.org">Metaverse</a> public Blockchain.</p>
-    <a href="https://github.com/bitident" target="blank"><img src="/assets/img/github.svg" class="img-responsive" alt="github"></a>
+    <a href="https://github.com/bitident" target="blank"><img class="icon" src="/assets/img/github.svg" alt="github"></a>
+    <a href="https://www.linkedin.com/company/bitident" target="blank"><img class="icon linkedin" src="/assets/img/linkedin.svg" alt="linkedin"></a>
+    
   </div>
   <div fxFlex.lt-md="90" fxFlex.gt-sm="45">
     <p>The software is provided "as is", without warranty of any kind, express or implied, including but not limited to
