--- a/www/src/app/footer/footer.component.scss
+++ b/www/src/app/footer/footer.component.scss
@@ -6,4 +6,12 @@
     padding-top: 20px;
     padding-bottom: 20px;
     margin-top: 50px;
+    .icon {
+        height: 32px;
+        width: auto;
+        margin-right: 5px;
+    }
+    .icon.linkedin{
+        filter: invert(0.7);
+    }
 }
