Create how to use page

--- a/www/src/app/login/login.component.html
+++ b/www/src/app/login/login.component.html
@@ -4,6 +4,10 @@
     <input matInput placeholder="Avatar name" formControlName="avatar" (keydown)="errorMessage=null">
   </mat-form-field>
   <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-  <button type="submit" [disabled]="!loginForm.valid" mat-raised-button color="primary" (click)="submit()">Request Authorization</button>
+  <button type="submit" [disabled]="!loginForm.valid" mat-raised-button color="primary" (click)="submit()">Request
+    Authorization</button>
   <p *ngIf="errorMessage" class="error-message">{{errorMessage}}</p>
+  <a [routerLink]="['howto']">
+    <button mat-raised-button color="secondary">How does it work?</button>
+  </a>
 </form>
