--- a/www/src/styles.scss
+++ b/www/src/styles.scss
@@ -30,6 +30,14 @@ h1{
   font-size: 20px;
 }
 
+button.mat-raised-button{
+  margin-bottom: 10px;
+}
+
+h5 {
+  margin-bottom: 0px;
+}
+
 .error-message{
   color: #D4483E;
 }
