--- a/www/src/app/footer/footer.component.html
+++ b/www/src/app/footer/footer.component.html
@@ -4,10 +4,15 @@
       <img style="padding-top: 0px; max-width: 400px; width: 100%; height: auto;" src="/assets/img/metaverse.png"
         alt="Metaverse">
     </a>
-    <p>Bitident is an open standard for decentralized authentication powered by the <a href="https://mvs.org">Metaverse</a> public Blockchain.</p>
-    <a href="https://github.com/bitident" target="blank"><img class="icon" src="/assets/img/github.svg" alt="github"></a>
-    <a href="https://www.linkedin.com/company/bitident" target="blank"><img class="icon linkedin" src="/assets/img/linkedin.svg" alt="linkedin"></a>
-    
+    <p>Bitident is an open standard for decentralized authentication powered by the <a
+        href="https://mvs.org">Metaverse</a> public Blockchain.</p>
+    <div>
+      <a href="https://github.com/bitident" target="blank"><img class="icon" src="/assets/img/github.svg"
+          alt="github"></a>
+      <a href="mailto:info@bitident.com"><img class="icon mail" src="/assets/img/mail.svg" alt="email"></a>
+      <a href="https://www.linkedin.com/company/bitident" target="blank"><img class="icon linkedin"
+          src="/assets/img/linkedin.svg" alt="linkedin"></a>
+    </div>
   </div>
   <div fxFlex.lt-md="90" fxFlex.gt-sm="45">
     <p>The software is provided "as is", without warranty of any kind, express or implied, including but not limited to
