--- a/www/src/app/howto/howto.component.html
+++ b/www/src/app/howto/howto.component.html
@@ -72,7 +72,7 @@
     </li>
     <li>
         <h5>
-            Open your bitident compatible wallet and use the Authentication tool to scan the request.
+            Open your bitident compatible wallet and use the Authentication tool to scan the request
         </h5>
         <p>
             You should now see the request parameters. Carefully check the request origin and URL
